--- a/knp/autodoc/common_files/styles/custom.css
+++ b/knp/autodoc/common_files/styles/custom.css
@@ -90,6 +90,10 @@ html.dark-mode .bordered_image object[type="image/svg+xml"] /* doxygen 1.9.3 */ 
     border-radius: var(--border-radius-small);
 }
 
+html.dark-mode td#projectlogo > img {
+    content:url("logo_dark.svg");
+}
+
 .title_screenshot {
     filter: drop-shadow(0px 3px 10px rgba(0,0,0,0.22));
     max-width: 500px;
