Doxygen template style fixed

--- a/knp/autodoc/common_files/styles/icons.css
+++ b/knp/autodoc/common_files/styles/icons.css
@@ -1,13 +1,14 @@
 /* Icons for the classes and namespaces */
 
 span.icon-N {
-    content: url(symbol-namespace.svg);
+    content: url(symbol-namespace_white.svg);
     display: inline-block;
     vertical-align: middle;
+    color: white;
 }
 
 span.icon-C {
-    content: url(symbol-class.svg);
+    content: url(symbol-class_white.svg);
     display: inline-block;
     vertical-align: middle;
 }
