--- a/knp/autodoc/common_files/styles/doxygen-awesome.css
+++ b/knp/autodoc/common_files/styles/doxygen-awesome.css
@@ -75,11 +75,9 @@ html {
     /* The content is centered and constraint in it's width. To make the content fill the whole page, set the variable to auto.*/
     --content-maxwidth: 1050px;
     --table-line-height: 24px;
-    --toc-sticky-top: var(
-    --spacing-medium);
+    --toc-sticky-top: var(--spacing-medium);
     --toc-width: 200px;
-    --toc-max-height: calc(100vh - 2 * var(
-    --spacing-medium) - 85px);
+    --toc-max-height: calc(100vh - 2 * var(--spacing-medium) - 85px);
 
     /* colors for various content boxes: @warning, @note, @deprecated @bug */
     --warning-color: #f8d1cc;
@@ -107,8 +105,7 @@ html {
 
     /* table colors */
     --tablehead-background: #f1f1f1;
-    --tablehead-foreground: var(
-    --page-foreground-color);
+    --tablehead-foreground: var(--page-foreground-color);
 
     /* menu-display: block | none
      * Visibility of the top navigation on screens >= 768px. On smaller screen the menu is always visible.
@@ -116,36 +113,28 @@ html {
      */
     --menu-display: block;
 
-    --menu-focus-foreground: var(
-    --page-background-color);
-    --menu-focus-background: var(
-    --primary-color);
+    --menu-focus-foreground: var(--page-background-color);
+    --menu-focus-background: var(--primary-color);
     --menu-selected-background: rgba(0,0,0,.05);
 
 
-    --header-background: var(
-    --page-background-color);
-    --header-foreground: var(
-    --page-foreground-color);
+    --header-background: var(--page-background-color);
+    --header-foreground: var(--page-foreground-color);
 
     /* searchbar colors */
-    --searchbar-background: var(
-    --side-nav-background);
-    --searchbar-foreground: var(
-    --page-foreground-color);
+    --searchbar-background: var(--side-nav-background);
+    --searchbar-foreground: var(--page-foreground-color);
 
     /* searchbar size
      * (`searchbar-width` is only applied on screens >= 768px.
      * on smaller screens the searchbar will always fill the entire screen width) */
     --searchbar-height: 33px;
     --searchbar-width: 210px;
-    --searchbar-border-radius: var(
-    --searchbar-height);
+    --searchbar-border-radius: var(--searchbar-height);
 
     /* code block colors */
     --code-background: #f5f5f5;
-    --code-foreground: var(
-    --page-foreground-color);
+    --code-foreground: var(--page-foreground-color);
 
     /* fragment colors */
     --fragment-background: #F8F9FA;
@@ -164,27 +153,22 @@ html {
 
     /* sidebar navigation (treeview) colors */
     --side-nav-background: #fbfbfb;
-    --side-nav-foreground: var(
-    --page-foreground-color);
+    --side-nav-foreground: var(--page-foreground-color);
     --side-nav-arrow-opacity: 0;
     --side-nav-arrow-hover-opacity: 0.9;
 
-    --toc-background: var(
-    --side-nav-background);
-    --toc-foreground: var(
-    --side-nav-foreground);
+    --toc-background: var(--side-nav-background);
+    --toc-foreground: var(--side-nav-foreground);
 
     /* height of an item in any tree / collapsible table */
     --tree-item-height: 30px;
 
-    --memname-font-size: var(
-    --code-font-size);
+    --memname-font-size: var(--code-font-size);
     --memtitle-font-size: 18px;
 
     --webkit-scrollbar-size: 7px;
     --webkit-scrollbar-padding: 4px;
-    --webkit-scrollbar-color: var(
-    --separator-color);
+    --webkit-scrollbar-color: var(--separator-color);
 }
 
 @media screen and (max-width: 767px) {
@@ -324,6 +308,7 @@ html.dark-mode {
 }
 
 body {
+    font-family: var(--font-family);
     color: var(--page-foreground-color);
     background-color: var(--page-background-color);
     font-size: var(--page-font-size);
