--- a/doc/styles/style.css
+++ b/doc/styles/style.css
@@ -1,146 +1,101 @@
+#video-background {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
 .grid-container {
-	background-color: #fff;
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
-	min-width: 950px;
-	min-height: 550px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 126px;
+    width: 100vw;
+    height: 100vh;
+    min-width: 590px;
+    min-height: 480px;
 }
 
-.grid-container .overlap-group-wrapper {
-	background-color: #fff;
-	width: 100%;
-	height: 100%;
-}
-
-.grid-container .overlap-group {
-	display: grid;
-	align-items: center;
-	flex-direction: column;
-	grid-template-rows: 1fr 126px;
-	position: relative;
-	height: 100%;
-	width: 100%;
-	background-image: url(../img/immunity-texture-white-1.svg);
-	background-size: cover;
-	background-position: 50% 50%;
-}
+/*
+ Header
+*/
 
 .grid-container .header {
-	display: inline-flex;
-	gap: 68px;
-	flex-direction: column;
-	align-items: center;
-	margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    justify-content: flex-end;
+    align-items: center;
+
 }
 
-.grid-container .logo-wrapper {
-	display: inline-flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 16px;
-	position: relative;
-	flex: 0 0 auto;
-}
+/*
+ /Header
+*/
 
-.grid-container .logo {
-	display: inline-flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	gap: 8px;
-	position: relative;
-	flex: 0 0 auto;
-}
+/*
+ Content
+*/
 
-.grid-container .element {
-	position: relative;
-	width: 96px;
-	height: 96px;
-	background-image: url(../img/atom-product-icon-02-b2b-base-128.svg);
-	background-size: 100% 100%;
-}
-
-.grid-container .img {
-	position: absolute;
-	width: 84px;
-	height: 93px;
-	top: 2px;
-	left: 6px;
+.grid-container .content {
+    display: flex;
+    justify-content: center;
+    margin-top: 68px;
 }
 
 .grid-container .kaspersky {
-	position: relative;
-	width: fit-content;
-	color: #000;
-	text-align: center;
-	letter-spacing: 0;
-	font: 400 32px/normal "Kaspersky Sans-Regular",Helvetica;
+    text-align: center;
+    font: 400 32px/normal "KasperskySansDisplay", MuseoSans, Helvetica;
 }
 
 .grid-container .buttons {
-	display: inline-flex;
-	align-items: flex-start;
-	gap: 32px;
-	position: relative;
-	flex: 0 0 auto;
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+    gap: 32px;
+    height: fit-content;
+
 }
 
-.grid-container .button {
-	background-color: #fff;
-	display: flex;
-	width: 232px;
-	justify-content: center;
-	gap: 16px;
-	padding: 32px 40px;
-	position: relative;
-	border-radius: 12px;
-	border: 1px solid;
-	border-color: #0000002b;
-	flex-direction: column;
-	align-items: center;
-	color: #000;
-	word-wrap: break-word;
-	font: 500 20px "Kaspersky Sans Display";
+.button-like {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #0000002b;
+    padding: 32px 40px;
+    border-radius: 12px;
+    font: 500 20px "KasperskySansDisplay", MuseoSans, Helvetica;
+
+    color: #000;
+    transition: color .7s ease-in-out;
 }
 
-.grid-container .button:hover .text-wrapper {
-	color: #00a88e;
-	transition: .7s;
+
+.button-like:hover {
+    color: #00a88e;
 }
 
-.grid-container .text-wrapper {
-	position: relative;
-	width: fit-content;
-	margin-top: -1px;
-	color: #000;
-	letter-spacing: 0;
-	white-space: nowrap;
-	font: 500 20px/normal "Kaspersky Sans Display-Medium",Helvetica;
-}
+/*
+ /Content
+*/
 
+/*
+ Footer
+*/
 .grid-container .footer {
-	display: flex;
-	width: 100%;
-	top: 86%;
-	align-items: center;
-	justify-content: space-between;
-	padding: 48px;
-	left: 0;
-}
-
-.grid-container .kaspersky-2 {
-	position: relative;
-	width: 158px;
-	height: 30.03px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 48px;
 }
 
 .grid-container .copyright {
-	position: relative;
-	width: fit-content;
-	color: #0006;
-	letter-spacing: 0;
-	white-space: nowrap;
-	font: 500 14px/normal "Kaspersky Sans Display-Medium",MuseoSans,Helvetica;
+    color: #0006;
+    font: 500 14px/normal "KasperskySansDisplay", MuseoSans, Helvetica;
 }
+
+/*
+ /Footer
+*/
