--- a/knp/autodoc/common_files/styles/custom.css
+++ b/knp/autodoc/common_files/styles/custom.css
@@ -103,3 +103,11 @@ html.dark-mode td#projectlogo > img {
 .title_screenshot .caption {
     display: none;
 }
+
+
+/* Filter generator: https://codepen.io/sosuke/pen/Pjoqqp */
+/*
+#nav-sync {
+    filter: invert(45%) sepia(94%) saturate(598%) hue-rotate(127deg) brightness(89%) contrast(101%);
+}
+*/
