--- a/knp/autodoc/common_files/styles/custom.css
+++ b/knp/autodoc/common_files/styles/custom.css
@@ -105,6 +105,14 @@ html.dark-mode td#projectlogo > img {
 }
 
 
+.navpath li.navelem a:hover
+{
+    text-shadow: none !important;
+    text-decoration: underline;
+	color:#009982;
+}
+
+
 /* Filter generator: https://codepen.io/sosuke/pen/Pjoqqp */
 /*
 #nav-sync {
