--- a/knp/autodoc/common_files/styles/styles.css
+++ b/knp/autodoc/common_files/styles/styles.css
@@ -3,7 +3,7 @@ The standard CSS for doxygen 1.8.13.
 
 © 2024 AO Kaspersky Lab
 
-This file has been modified by AO Kaspersky Lab in <mon-yyyy - дата изменения>.
+This file has been modified by AO Kaspersky Lab in 03.2024.
 Scope of modification:
 
 - MathJax messages hidden.
